# Yasld

./: '  .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  Readme.md  lib.cpp  main.cpp  packages.json
api_generator/: CMakeLists.txt
include/: CMakeLists.txt  dynamic_linker.hpp  loaded_module.hpp  module.hpp  relocation.hpp
include/msos/dynamic_linker/: dynamic_linker.hpp  logging.hpp  module.hpp  module_data.hpp
source/: CMakeLists.txt  allocator.cpp  data_relocation.cpp  dependency.cpp  dynamic_linker.cpp  dynamic_linker_errors.cpp  executable.cpp  header.cpp  library.cpp  loaded_module.cpp  loader.cpp  local_relocation.cpp  module.cpp  module_data.cpp  module_header.cpp  parser.cpp  relocation.cpp  relocation_table.cpp  section.cpp  symbol.cpp  symbol_iterator.cpp  symbol_table.cpp
source/arch/: CMakeLists.txt
source/arch/armv-6m/: CMakeLists.txt  call_external.S
source/arch/armv-7m/: CMakeLists.txt  call_external.s
source/arch/armv6-m/: CMakeLists.txt  call.S  call_buggy.S  call_wrapped.S.tmpl  call_wrapped.s.tmpl  service_call.cpp  supervisor_call.cpp
source/arch/armv6-m/include/yasld/: arch.hpp  service_call.hpp  supervisor_call.hpp
source/arch/host/: CMakeLists.txt  call.c  call.cpp
source/arch/host/include/yasld/: arch.hpp
source/include/yasld/: align.hpp  allocator.hpp  data_relocation.hpp  dependency.hpp  dependency_iterator.hpp  dependency_list.hpp  environment.hpp  executable.hpp  header.hpp  item_iterator.hpp  item_table.hpp  library.hpp  loader.hpp  local_relocation.hpp  logger.hpp  module.hpp  parser.hpp  relocation.hpp  relocation_table.hpp  section.hpp  symbol.hpp  symbol_iterator.hpp  symbol_table.hpp
stub/linux/: CMakeLists.txt  dynamic_linker.cpp  loaded_module.cpp  module.cpp
tests/loader/: CMakeLists.txt  main.cpp
tests/st/armv6-m/stm32f0/discovery_f072/tests/: CMakeLists.txt
tests/st/cortex-m0plus/common/: CMakeLists.txt
tests/st/cortex-m0plus/stm32f0/: CMakeLists.txt
tests/st/cortex-m0plus/stm32f0/common/: CMakeLists.txt  packages.json  system_stubs.cpp
tests/st/cortex-m0plus/stm32f0/common/cmake/: AddTestWithModule.cmake  CreateLibOpenCM3.cmake  build_binary.py
tests/st/cortex-m0plus/stm32f0/common/include/: board_init.hpp
tests/st/cortex-m0plus/stm32f0/discovery_f072/: CMakeLists.txt  stm32f0_discovery.ld
tests/st/cortex-m0plus/stm32f0/discovery_f072/tests/: CMakeLists.txt  execute.resc  stm32f0_discovery_f072_common.robot
tests/st/cortex-m0plus/stm32f0/modules/: CMakeLists.txt  packages.json
tests/st/cortex-m0plus/stm32f0/modules/cat_spawner/: CMakeLists.txt  spawn_cat.cpp  spawn_cat.hpp
tests/st/cortex-m0plus/stm32f0/modules/classes/: CMakeLists.txt
tests/st/cortex-m0plus/stm32f0/modules/common/: CMakeLists.txt  system_stubs.cpp
tests/st/cortex-m0plus/stm32f0/modules/floating_point/: CMakeLists.txt
tests/st/cortex-m0plus/stm32f0/modules/floppy/: CMakeLists.txt  main.cpp
tests/st/cortex-m0plus/stm32f0/modules/hello_world/: CMakeLists.txt
tests/st/cortex-m0plus/stm32f0/modules/hello_world_shared/: CMakeLists.txt  main.cpp
tests/st/cortex-m0plus/stm32f0/modules/hello_world_shared_libc/: CMakeLists.txt  main.cpp
tests/st/cortex-m0plus/stm32f0/modules/shared_libc/: CMakeLists.txt
tests/st/cortex-m0plus/stm32f0/modules/simple_library/: CMakeLists.txt  (+1 more)
tests/st/cortex-m0plus/stm32f0/nucleo_f091c/: nucleo_f091rc.repl  stm32f091.repl  stm32f0_nucleo_f091rc.ld
tests/st/stm32f0_disco/: CMakeLists.txt  stm32f0_discovery.ld  test.robot
tests/st/stm32f0_disco/cmake/: AddTestWithModule.cmake  BuildFlags.cmake
tests/st/stm32f0_disco/common/: system_stubs.cpp
tests/st/stm32f0_disco/modules/: CMakeLists.txt  packages.json
tests/st/stm32f0_disco/modules/classes/: CMakeLists.txt
tests/st/stm32f0_disco/modules/common/: CMakeLists.txt  stub.cpp
tests/st/stm32f0_disco/modules/floating_point/: CMakeLists.txt  main.cpp
tests/st/stm32f0_disco/modules/hello_world/: CMakeLists.txt
tests/st/stm32f0_disco/modules/hello_world_shared/: CMakeLists.txt
tests/st/stm32f0_disco/modules/hello_world_standalone/: CMakeLists.txt
tests/st/stm32f0_disco/modules/return_value/: CMakeLists.txt
tests/st/stm32f0_disco/modules/simple_library/: CMakeLists.txt  simple_library.cpp
tests/st/stm32f0_disco/modules/sum/: CMakeLists.txt
tests/st/stm32f0_disco/modules/sum_of_sine_of_extern_values/: CMakeLists.txt  main.cpp
tests/st/stm32f0_disco/source/: CMakeLists.txt  execute.resc.templ  execute_gdb.resc.templ
tests/st/stm32f0_disco/source/host/: CMakeLists.txt  main.cpp  system_stubs.cpp
tests/st/stm32f0_disco/source/tests/: CMakeLists.txt
tests/st/stm32f0_disco/tests/: CMakeLists.txt  execute.resc  execute_gdb.resc  execute_with_gdb.resc  stm32f0_common.robot
tests/st/stm32f0_disco/tests/calculate_floating_point/: CMakeLists.txt  main.cpp  stm32f0_calculate_floating_point.robot  stm32f0_calculate_floating_point_test.robot
tests/st/stm32f0_disco/tests/calculate_of_sine_of_extern_values/: CMakeLists.txt  main.cpp  stm32f0_calculate_of_sine_of_extern_values.robot
tests/st/stm32f0_disco/tests/common/: CMakeLists.txt  system_stubs.cpp
tests/st/stm32f0_disco/tests/import_simple_library/: main.cpp  stm32f0_import_simple_library.robot
tests/st/stm32f0_disco/tests/print_hello_world/: CMakeLists.txt  execute.resc  main.cpp  stm32f0_print_hello_world.robot  stm32f0_print_hello_world_test.robot
tests/st/stm32f0_disco/tests/print_hello_world_using_external_symbols/: CMakeLists.txt  main.cpp  stm32f0_print_hello_world_using_external_symbols.robot
tests/st/stm32f0_disco/tests/report_failure_for_wrong_file/: CMakeLists.txt  main.cpp  stm32f0_report_failure_for_wrong_file.robot
tests/st/stm32f0_disco/tests/report_if_symbol_not_exists/: main.cpp  stm32f0_report_if_symbol_not_exists.robot
tests/st/stm32f0_disco/tests/return_value/: CMakeLists.txt  main.cpp  stm32f0_return_value_from_module.robot
tests/st/stm32f0_disco/tests/support_for_cpp_classes/: CMakeLists.txt  main.cpp
tests/ut/: CMakeLists.txt  align_tests.cpp  loader_tests.cpp  packages.json  parser_tests.cpp  putchar.cpp
(+169 files in other folders)
